# mlops_transfer

mlops_level3/: ModelTraining.py  combineData.py  one_line.csv  valid_test.csv  wrong_format.csv
mlops_level3/ml_pipeline/: README.md  pyproject.toml
mlops_level3/ml_pipeline/.tmp_dagster_home_qbuqm04t/history/: runs.db
mlops_level3/ml_pipeline/.tmp_dagster_home_qbuqm04t/history/runs/: .db  f2d53a07-ebbd-4b0f-9fe2-d3d549d9c23a.db  index.db
mlops_level3/ml_pipeline/.tmp_dagster_home_qbuqm04t/schedules/: schedules.db
mlops_level3/ml_pipeline/.tmp_dagster_home_qbuqm04t/storage/: test_asset
mlops_level3/ml_pipeline/.tmp_dagster_home_qbuqm04t/storage/f2d53a07-ebbd-4b0f-9fe2-d3d549d9c23a/compute_logs/: cmyfotvo.err  cmyfotvo.out
mlops_level3/ml_pipeline/api/: api.md  main.py  routes.py
mlops_level3/ml_pipeline/db_postgres/: connection.py  initPostgres.md
mlops_level3/ml_pipeline/src/ml_pipeline/defs/: assets.py
